[gd_scene load_steps=8 format=3 uid="uid://ce6m8secxwxlj"]

[ext_resource type="Shader" path="res://main.gdshader" id="1_j7sod"]
[ext_resource type="Script" path="res://main.gd" id="1_uis4v"]
[ext_resource type="Script" path="res://Camera_point.gd" id="4_6qh1k"]
[ext_resource type="Texture2D" uid="uid://bbl11cyd1hucw" path="res://Alpha snip DDU.png" id="4_cgdhi"]
[ext_resource type="PackedScene" uid="uid://cq6ckwwmv3k7g" path="res://new_box.tscn" id="5_i3mma"]
[ext_resource type="Texture2D" uid="uid://cfeie2h0sp4b1" path="res://Untitled-1.png" id="5_nke22"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4s5m"]
render_priority = 1
shader = ExtResource("1_j7sod")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/wire_color = Color(0, 0, 0, 1)
shader_parameter/wire_width = 5.0
shader_parameter/wire_smoothness = 0.01

[node name="Main" type="Node3D"]
script = ExtResource("1_uis4v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 120, 130, 120)
light_energy = 0.5

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.573576, -0.579228, 0.579228, 0, 0.707107, 0.707107, -0.819152, 0.40558, -0.40558, 120, 130, 0)
light_energy = 0.5

[node name="DirectionalLight3D3" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, 0, 130, 120)
light_energy = 0.5

[node name="DirectionalLight3D4" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.766044, 0.454519, -0.454519, 0, 0.707107, 0.707107, 0.642788, 0.541675, -0.541675, 0, 130, 0)
light_energy = 0.5

[node name="Outerbox" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 50, 50)
material_override = SubResource("ShaderMaterial_c4s5m")
size = Vector3(100, 100, 100)

[node name="Panning" type="Label3D" parent="Outerbox"]
transform = Transform3D(-4.37114e-08, -0.707107, 0.707107, 0, 0.707107, 0.707107, -1, 3.09086e-08, -3.09086e-08, 55, -55, 0)
pixel_size = 0.5
double_sided = false
text = "(L)   PANNING   (R)"
font_size = 16
outline_size = 6

[node name="Panning2" type="Label3D" parent="Outerbox"]
transform = Transform3D(-4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, -55, -55, 2.08165e-12)
pixel_size = 0.5
double_sided = false
text = "(R)   PANNING   (L)"
font_size = 16
outline_size = 6

[node name="Depth" type="Label3D" parent="Outerbox"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 2.08165e-12, -55, 55)
pixel_size = 0.5
double_sided = false
text = "(W)   DEPTH   (D)"
font_size = 16
outline_size = 6

[node name="Depth2" type="Label3D" parent="Outerbox"]
transform = Transform3D(-1, 6.18172e-08, -6.18172e-08, 0, 0.707107, 0.707107, 8.74228e-08, 0.707107, -0.707107, 2.08165e-12, -55, -55)
pixel_size = 0.5
double_sided = false
text = "(D)   DEPTH   (W)"
font_size = 16
outline_size = 6

[node name="freq" type="Label3D" parent="Outerbox"]
transform = Transform3D(-3.09086e-08, -0.707107, 0.707107, 1, -4.37114e-08, 0, 3.09086e-08, 0.707107, 0.707107, 55, 0, -55)
pixel_size = 0.5
double_sided = false
text = "(L)   FREQ.   (H)"
font_size = 16
outline_size = 6

[node name="freq1" type="Label3D" parent="Outerbox"]
transform = Transform3D(9.27259e-08, -0.707107, -0.707107, 1, 4.37114e-08, 8.74228e-08, -3.09086e-08, -0.707107, 0.707107, 55, 0, 55)
pixel_size = 0.5
double_sided = false
text = "(L)   FREQ.   (H)"
font_size = 16
outline_size = 6

[node name="freq2" type="Label3D" parent="Outerbox"]
transform = Transform3D(3.09086e-08, 0.707107, -0.707107, 1, -4.37114e-08, 0, -3.09086e-08, -0.707107, -0.707107, -55, 0, 55)
pixel_size = 0.5
double_sided = false
text = "(L)   FREQ.   (H)"
font_size = 16
outline_size = 6

[node name="freq3" type="Label3D" parent="Outerbox"]
transform = Transform3D(3.09086e-08, 0.707107, 0.707107, 1, -4.37114e-08, 0, 3.09086e-08, 0.707107, -0.707107, -55, 0, -55)
pixel_size = 0.5
double_sided = false
text = "(L)   FREQ.   (H)"
font_size = 16
outline_size = 6

[node name="Canvas_layer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="Canvas_layer"]
layout_mode = 3
anchor_right = 0.037
anchor_bottom = 0.08
offset_right = 1087.4
offset_bottom = 348.0

[node name="PopupPanel" type="PopupPanel" parent="Canvas_layer/HUD"]
title = "INFO"
initial_position = 1
size = Vector2i(500, 500)
visible = true
always_on_top = true
max_size = Vector2i(500, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="Canvas_layer/HUD/PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 496.0

[node name="Label" type="Label" parent="Canvas_layer/HUD/PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "INFO"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Canvas_layer/HUD/PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 18
text = "1. Use arrow keys or on screen buttons to rotate the square.

2. The \"Rotate\" button toggles a spin on the square until turned off by pressing it again.

3. To change the transparency of a cube/layer use this slider as seen below, when you have opened the color menu:"
fit_content = true

[node name="Sprite2D" type="Sprite2D" parent="Canvas_layer/HUD/PopupPanel/VBoxContainer"]
position = Vector2(160, 230)
scale = Vector2(1.3, 1.3)
texture = ExtResource("4_cgdhi")
offset = Vector2(50, 80)

[node name="Box_list_container" type="VBoxContainer" parent="Canvas_layer/HUD"]
layout_mode = 0
offset_left = 22.0
offset_top = 141.0
offset_right = 276.0
offset_bottom = 164.0

[node name="Layers_text" type="RichTextLabel" parent="Canvas_layer/HUD"]
layout_mode = 2
offset_left = 92.0
offset_top = 92.0
offset_right = 194.0
offset_bottom = 138.0
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 30
text = " Layers"
scroll_active = false

[node name="add_new" type="Button" parent="Canvas_layer/HUD"]
layout_mode = 0
offset_left = 22.0
offset_top = 24.0
offset_right = 276.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 31
text = "+ Add new"

[node name="New_box" parent="Canvas_layer/HUD" instance=ExtResource("5_i3mma")]
visible = false
layout_mode = 1
offset_left = 10.0
offset_top = 611.0
offset_right = -712.0
offset_bottom = 539.0

[node name="Right" type="Button" parent="Canvas_layer/HUD"]
layout_mode = 0
offset_left = 1678.0
offset_top = 22.0
offset_right = 1776.0
offset_bottom = 90.0
icon = ExtResource("5_nke22")

[node name="Left" type="Button" parent="Canvas_layer/HUD"]
layout_mode = 0
offset_left = 1596.0
offset_top = 90.0
offset_right = 1694.0
offset_bottom = 158.0
rotation = 3.14159
icon = ExtResource("5_nke22")

[node name="Middle" type="Button" parent="Canvas_layer/HUD"]
layout_mode = 0
offset_left = 1598.0
offset_top = 22.0
offset_right = 1676.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "Rotate"

[node name="Camera_point" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 50, 50)
script = ExtResource("4_6qh1k")

[node name="Camera3D" type="Camera3D" parent="Camera_point"]
transform = Transform3D(0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 103, 70, 100)
fov = 60.0

[connection signal="pressed" from="Canvas_layer/HUD/add_new" to="." method="_on_add_new_pressed"]
[connection signal="pressed" from="Canvas_layer/HUD/add_new" to="Canvas_layer/HUD/New_box" method="_on_add_new_pressed"]
[connection signal="button_down" from="Canvas_layer/HUD/Right" to="Camera_point" method="_on_right_button_down"]
[connection signal="button_up" from="Canvas_layer/HUD/Right" to="Camera_point" method="_on_right_button_up"]
[connection signal="button_down" from="Canvas_layer/HUD/Left" to="Camera_point" method="_on_left_button_down"]
[connection signal="button_up" from="Canvas_layer/HUD/Left" to="Camera_point" method="_on_left_button_up"]
[connection signal="pressed" from="Canvas_layer/HUD/Middle" to="Camera_point" method="_on_middle_pressed"]
